[package]
name = "futurchain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "futurchain"
path = "src/main.rs"

[lib]
name = "futurchain"
path = "src/lib.rs"

[dependencies]
tokio         = { version = "1",  features = ["full"] }
axum          = "0.7"
serde         = { version = "1",  features = ["derive"] }
serde_json    = "1"
sha2          = "0.10"
hex           = "0.4"
ed25519-dalek = { version = "2",  features = ["rand_core"] }
rand          = "0.8"
thiserror     = "1"
clap          = { version = "4",  features = ["derive"] }
anyhow        = "1"
sled          = "0.34"

[dev-dependencies]
tokio-test    = "0.4"
